# Scraplex

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  test_cloudscraper.py  test_curl_cffi.py  test_curl_cffi_async.py  test_fallback_methods.py  test_scrapling.py  test_seleniumbase.py  test_stealthplex.py  test_wreq.py
.github/workflows/: pypi-publish.yml
Scraplex/: __init__.py  __init__.pyi  exceptions.py  factory.py  factory.pyi  fallback.py  fallback_client.py  response.py  session.py  types.py
Scraplex/engines/: __init__.py  base.py  docs.py  proxies.pyi  registry.py
Scraplex/engines/cloudscraper/: __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
Scraplex/engines/curl_cffi/: __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
Scraplex/engines/scrapling/: __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
Scraplex/engines/seleniumbase/: __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
Scraplex/engines/wreq/: __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
StealthPlex/: __init__.py  __init__.pyi  exceptions.py  factory.py  factory.pyi  fallback.py  fallback_client.py  response.py  types.py
StealthPlex/engines/: __init__.py  base.py  docs.py  registry.py
StealthPlex/engines/cloudscraper/: README.md  __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
StealthPlex/engines/curl_cffi/: README.md  __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
StealthPlex/engines/scrapling/: README.md  __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
StealthPlex/engines/seleniumbase/: README.md  __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
StealthPlex/engines/wreq/: README.md  __init__.py  _docs.py  engine.py  proxy.py  proxy.pyi
