[project]
name = "StealthPlex"
version = "0.1.0"
description = "Python scraping with curl_cffi, wreq, cloudscraper, Scrapling, or SeleniumBase UC/CDP—swap engines or auto-escalate past Cloudflare and bot checks."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
wreq = ["wreq"]
curl_cffi = ["curl-cffi"]
cloudscraper = ["cloudscraper"]
scrapling = ["scrapling[fetchers]"]
seleniumbase = ["seleniumbase"]
all = ["wreq", "curl-cffi", "cloudscraper", "scrapling[fetchers]", "seleniumbase"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["StealthPlex"]

[tool.hatch.build]
include = ["StealthPlex/py.typed", "StealthPlex/**/*.pyi"]
