[project]
name = "StealthPlex"
version = "0.0.1"
description = "StealthPlex is a multi-engine stealth fetch layer for Python scraping—anti-bot bypass from TLS fingerprinting to CDP browsers, with optional auto-escalation."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
wreq = ["wreq"]
curl_cffi = ["curl-cffi"]
cloudscraper = ["cloudscraper"]
scrapling = ["scrapling[fetchers]"]
seleniumbase = ["seleniumbase"]
all = ["wreq", "curl-cffi", "cloudscraper", "scrapling[fetchers]", "seleniumbase"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["StealthPlex"]

[tool.hatch.build]
include = ["StealthPlex/py.typed", "StealthPlex/**/*.pyi"]
