[project]
name = "StealthPlex"
version = "0.0.2"
description = "Multi-engine stealth fetch layer for Python scraping—anti-bot bypass from TLS fingerprinting to CDP browsers, with optional auto-escalation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SSujitX" }]
keywords = [
    "stealth",
    "scraping",
    "anti-bot",
    "cloudflare",
    "http-client",
    "curl-cffi",
    "wreq",
    "cloudscraper",
    "scrapling",
    "seleniumbase",
    "tls-fingerprint",
    "bot-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
wreq = ["wreq"]
curl_cffi = ["curl-cffi"]
cloudscraper = ["cloudscraper"]
scrapling = ["scrapling[fetchers]"]
seleniumbase = ["seleniumbase"]
all = ["wreq", "curl-cffi", "cloudscraper", "scrapling[fetchers]", "seleniumbase"]

[project.urls]
Homepage = "https://github.com/SSujitX/StealthPlex"
Repository = "https://github.com/SSujitX/StealthPlex"
Documentation = "https://github.com/SSujitX/StealthPlex#readme"
Issues = "https://github.com/SSujitX/StealthPlex/issues"
Changelog = "https://github.com/SSujitX/StealthPlex/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["StealthPlex"]

[tool.hatch.build]
include = ["StealthPlex/py.typed", "StealthPlex/**/*.pyi"]
